--- a/a2/templates/index.html
+++ b/a2/templates/index.html
@@ -327,7 +327,7 @@
                             <a href="#" class="prise">$500</a>
                         </div>
                         <div class="place_info">
-                            <a href="destination_details.html"><h3>California</h3></a>
+                            <a href="destination_details.html"><h3>{{place1.name}}</h3></a>
                             <p>United State of America</p>
                             <div class="rating_days d-flex justify-content-between">
                                 <span class="d-flex justify-content-center align-items-center">
