--- a/a2/templates/index.html
+++ b/a2/templates/index.html
@@ -320,15 +320,18 @@
                 </div>
             </div>
             <div class="row">
+                {% for ap in places %}
                 <div class="col-lg-4 col-md-6">
                     <div class="single_place">
                         <div class="thumb">
                             <img src="img/place/1.png" alt="">
                             <a href="#" class="prise">$500</a>
                         </div>
+                        
                         <div class="place_info">
-                            <a href="destination_details.html"><h3>{{place1.name}}</h3></a>
-                            <p>United State of America</p>
+                            
+                            <a href="destination_details.html"><h3>{{ap.name}}</h3></a>
+                            <p>{{ap.cap}}</p>
                             <div class="rating_days d-flex justify-content-between">
                                 <span class="d-flex justify-content-center align-items-center">
                                      <i class="fa fa-star"></i> 
@@ -336,17 +339,20 @@
                                      <i class="fa fa-star"></i> 
                                      <i class="fa fa-star"></i> 
                                      <i class="fa fa-star"></i>
-                                     <a href="#">(20 Review)</a>
+                                     <a href="#">({{ap.review}} Review)</a>
                                 </span>
                                 <div class="days">
                                     <i class="fa fa-clock-o"></i>
-                                    <a href="#">5 Days</a>
+                                    <a href="#">{{ap.days}} Days</a>
                                 </div>
                             </div>
+                        
                         </div>
+                        
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                {% endfor %}
+                <!-- <div class="col-lg-4 col-md-6">
                     <div class="single_place">
                         <div class="thumb">
                             <img src="img/place/2.png" alt="">
@@ -475,7 +481,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="row">
                 <div class="col-lg-12">
