--- a/a2/templates/index.html
+++ b/a2/templates/index.html
@@ -341,6 +341,9 @@
                                      <i class="fa fa-star"></i>
                                      <a href="#">({{ap.review}} Review)</a>
                                 </span>
+                                {% if ap.offer %}
+                                <h1>great</h1>
+                                {% endif %}
                                 <div class="days">
                                     <i class="fa fa-clock-o"></i>
                                     <a href="#">{{ap.days}} Days</a>
