--- a/a2/templates/index.html
+++ b/a2/templates/index.html
@@ -55,7 +55,7 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a class="active" href="index.html">home</a></li>
+                                            <li><a class="active" href="index1.html">home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a class="" href="travel_destination.html">Destination</a></l/li>
                                             <li><a href="#">pages <i class="ti-angle-down"></i></a>
